# SproutEngine

./: CMakeLists.txt  README.md  SaltnPepper.sln
SaltnPepperEngine/: CMakeLists.txt  SaltnPepperEngine.cpp  SaltnPepperEngine.h  SaltnPepperEngine.vcxproj  SaltnPepperEngine.vcxproj.filters
SaltnPepperEngine/Engine/: CMakeLists.txt
SaltnPepperEngine/Engine/Core/: EngineDefines.hpp
SaltnPepperEngine/Engine/Math/: CMakeLists.txt  MathDefinitions.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp
SaltnPepperEngine/Engine/Math/Vectors/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
SaltnPepperEngine/Engine/Utilities/: CMakeLists.txt
SaltnPepperEngine/Engine/Utilities/Logging/: Log.cpp  Log.hpp
SaltnPepperEngine/Engine/Utilities/Math/: MathDefinitions.hpp  MathFunctions.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp
SaltnPepperEngine/Engine/Utilities/Math/Vectors/: Vector2.cpp  Vector2.hpp
SaltnPepperRuntime/: CMakeLists.txt  SaltnPepperRuntime.cpp  SaltnPepperRuntime.h
SproutEngine/: CMakeLists.txt  SproutEngine.cpp  SproutEngine.h
SproutEngine/Engine/: CMakeLists.txt
SproutEngine/Engine/Core/: EngineDefines.hpp
SproutEngine/Engine/Math/: CMakeLists.txt  MathDefinitions.hpp  MathFunctions.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp
SproutEngine/Engine/Math/Vectors/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
SproutEngine/Engine/Utilities/Logging/: Log.cpp  Log.hpp
SproutRuntime/: CMakeLists.txt  SproutRuntime.cpp  SproutRuntime.h
